WIP: lesson hours UI

--- a/templates/club/club-hours.html.twig
+++ b/templates/club/club-hours.html.twig
@@ -4,6 +4,7 @@
 {% block stylesheets2 %}
 	<link href="/assets/clubs/club.css" rel="stylesheet">
 	<link href="/assets/showcase/showcase.css" rel="stylesheet">
+	<link rel="stylesheet" href="/vendor/jquery.schedule/jquery.schedule.css">
 {% endblock %}
 
 
@@ -14,3 +15,41 @@
 
 
 {% endblock %}
+
+
+{% block javascriptsafter1 %}
+	<script src="/vendor/jquery-ui/jquery-ui.min.js"></script>
+	<script src="/vendor/jquery.schedule/jquery.schedule.js"></script>
+	
+	<script>
+
+$("#schedule-hours").jqs({
+    mode: "read",
+    data: [
+        {
+            day: 0,
+            periods: [
+                ["20:00", "00:00"],
+                ["00:00", "02:00"]
+            ]
+        }, {
+            day: 3,
+            periods: [
+                ["00:00", "08:30"],
+                ["09:00", "12:00"]
+            ]
+        }
+    ]
+});
+
+// https://www.jqueryscript.net/time-clock/Dynamic-Weekly-Scheduler-jQuery-Schedule.html
+// https://www.jqueryscript.net/demo/Dynamic-Weekly-Scheduler-jQuery-Schedule/
+// https://www.jqueryscript.net/demo/Simple-Daily-Schedule-Plugin-with-jQuery-and-jQuery-UI-Schedule/
+
+
+</script>
+	
+	
+{% endblock %}
+
+
