--- a/templates/club/default-hours.html.twig
+++ b/templates/club/default-hours.html.twig
@@ -1,13 +1,239 @@
-hours
 
 
 
 
+<!-- <div id="schedule-hours0" style="height: 333px">
 
-https://www.jqueryscript.net/time-clock/Dynamic-Weekly-Scheduler-jQuery-Schedule.html
-https://www.jqueryscript.net/demo/Dynamic-Weekly-Scheduler-jQuery-Schedule/
+</div>-->
 
 
+<!-- 
+<div id="schedule2" class="jqs-demo jqs">
+   <table class="jqs-table">
+      <tbody>
+         <tr>
+            <td>
+               <div class="jqs-wrapper">
+                  <div class="jqs-period" id="id_004048" style="top: 800px; height: 160px;">
+                     <div class="jqs-period-placeholder"><span>20:00 - 00:00</span></div>
+                  </div>
+                  <div class="jqs-period" id="id_1004" style="top: 0px; height: 80px;">
+                     <div class="jqs-period-placeholder"><span>00:00 - 02:00</span></div>
+                  </div>
+               </div>
+            </td>
+            <td>
+               <div class="jqs-wrapper"></div>
+            </td>
+            <td>
+               <div class="jqs-wrapper"></div>
+            </td>
+            <td>
+               <div class="jqs-wrapper">
+                  <div class="jqs-period" id="id_03017" style="top: 0px; height: 340px;">
+                     <div class="jqs-period-placeholder"><span>00:00 - 08:30</span></div>
+                  </div>
+                  <div class="jqs-period" id="id_131824" style="top: 360px; height: 120px;">
+                     <div class="jqs-period-placeholder"><span>09:00 - 12:00</span></div>
+                  </div>
+               </div>
+            </td>
+            <td>
+               <div class="jqs-wrapper"></div>
+            </td>
+            <td>
+               <div class="jqs-wrapper"></div>
+            </td>
+            <td>
+               <div class="jqs-wrapper"></div>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+   <div class="jqs-grid">
+      <div class="jqs-grid-head">
+         <div class="jqs-grid-day">Monday</div>
+         <div class="jqs-grid-day">Tuesday</div>
+         <div class="jqs-grid-day">Wednesday</div>
+         <div class="jqs-grid-day">Thursday</div>
+         <div class="jqs-grid-day">Friday</div>
+         <div class="jqs-grid-day">Saturday</div>
+         <div class="jqs-grid-day">Sunday</div>
+      </div>
+      <div class="jqs-grid-line"><span>00:00</span></div>
+      <div class="jqs-grid-line"><span>01:00</span></div>
+      <div class="jqs-grid-line"><span>02:00</span></div>
+      <div class="jqs-grid-line"><span>03:00</span></div>
+      <div class="jqs-grid-line"><span>04:00</span></div>
+      <div class="jqs-grid-line"><span>05:00</span></div>
+      <div class="jqs-grid-line"><span>06:00</span></div>
+      <div class="jqs-grid-line"><span>07:00</span></div>
+      <div class="jqs-grid-line"><span>08:00</span></div>
+      <div class="jqs-grid-line"><span>09:00</span></div>
+      <div class="jqs-grid-line"><span>10:00</span></div>
+      <div class="jqs-grid-line"><span>11:00</span></div>
+      <div class="jqs-grid-line"><span>12:00</span></div>
+      <div class="jqs-grid-line"><span>13:00</span></div>
+      <div class="jqs-grid-line"><span>14:00</span></div>
+      <div class="jqs-grid-line"><span>15:00</span></div>
+      <div class="jqs-grid-line"><span>16:00</span></div>
+      <div class="jqs-grid-line"><span>17:00</span></div>
+      <div class="jqs-grid-line"><span>18:00</span></div>
+      <div class="jqs-grid-line"><span>19:00</span></div>
+      <div class="jqs-grid-line"><span>20:00</span></div>
+      <div class="jqs-grid-line"><span>21:00</span></div>
+      <div class="jqs-grid-line"><span>22:00</span></div>
+      <div class="jqs-grid-line"><span>23:00</span></div>
+      <div class="jqs-grid-line"><span>00:00</span></div>
+   </div>
+</div>
 
-https://www.jqueryscript.net/demo/Simple-Daily-Schedule-Plugin-with-jQuery-and-jQuery-UI-Schedule/
+
+-->
+
+<div id="schedule-hours2" style="height: 333px;width: 851px;" class="jqs jqs-mode-read">
+   <table class="jqs-table">
+      <tbody>
+         <tr>
+            <td>
+               <div class="jqs-wrapper">
+                  <div class="jqs-period" id="jqs_sxe3ardexi7_1" title="" style="top: 800px; height: 160px;">
+                     <div class="jqs-period-placeholder"><span>20:00 - 00:00</span></div>
+                     <!-- <div class="jqs-period-container" style="background-color: rgba(82, 155, 255, 0.5); border-color: rgb(42, 60, 255); color: rgb(0, 0, 0);">
+                        <div class="jqs-period-time">20:00 - 00:00</div>
+                        <div class="jqs-period-title" style="height: 132px;"></div>
+                     </div> -->
+                  </div>
+                  <div class="jqs-period" id="jqs_sxe3ardexi7_2" title="" style="top: 0px; height: 80px;">
+                     <div class="jqs-period-container" style="background-color: rgba(82, 155, 255, 0.5); border-color: rgb(42, 60, 255); color: rgb(0, 0, 0);">
+                        <div class="jqs-period-time">00:00 - 02:00</div>
+                        <div class="jqs-period-title" style="height: 60px;"></div>
+                     </div>
+                  </div>
+               </div>
+            </td>
+            <td>
+               <div class="jqs-day"></div>
+            </td>
+            <td>
+               <div class="jqs-day"></div>
+            </td>
+            <td>
+               <div class="jqs-day">
+                  <div class="jqs-period" id="jqs_sxe3ardexi7_3" title="" style="top: 0px; height: 340px;">
+                     <div class="jqs-period-container" style="background-color: rgba(82, 155, 255, 0.5); border-color: rgb(42, 60, 255); color: rgb(0, 0, 0);">
+                        <div class="jqs-period-time">00:00 - 08:30</div>
+                        <div class="jqs-period-title" style="height: 312px;"></div>
+                     </div>
+                  </div>
+                  <div class="jqs-period" id="jqs_sxe3ardexi7_4" title="" style="top: 360px; height: 120px;">
+                     <div class="jqs-period-container" style="background-color: rgba(82, 155, 255, 0.5); border-color: rgb(42, 60, 255); color: rgb(0, 0, 0);">
+                        <div class="jqs-period-time">09:00 - 12:00</div>
+                        <div class="jqs-period-title" style="height: 96px;"></div>
+                     </div>
+                  </div>
+               </div>
+            </td>
+            <td>
+               <div class="jqs-day"></div>
+            </td>
+            <td>
+               <div class="jqs-day"></div>
+            </td>
+            <td>
+               <div class="jqs-day"></div>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+   <div class="jqs-grid">
+      <div class="jqs-grid-head">
+         <div class="jqs-grid-day">Monday</div>
+         <div class="jqs-grid-day">Tuesday</div>
+         <div class="jqs-grid-day">Wednesday</div>
+         <div class="jqs-grid-day">Thursday</div>
+         <div class="jqs-grid-day">Friday</div>
+         <div class="jqs-grid-day">Saturday</div>
+         <div class="jqs-grid-day">Sunday</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">00:00</div>
+      </div>
+      <div class="jqs-grid-line"><span>14:00</span></div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">01:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">02:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">03:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">04:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">05:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">06:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">07:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">08:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">09:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">10:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">11:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">12:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">13:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">14:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">15:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">16:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">17:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">18:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">19:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">20:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">21:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">22:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">23:00</div>
+      </div>
+      <div class="jqs-grid-line">
+         <div class="jqs-grid-hour">00:00</div>
+      </div>
+   </div>
+</div>
+
+
 
