--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,5 +22,6 @@
 		{% block javascriptsbefore1 %}{% endblock %}
 		{% block javascripts %}{% endblock %}
 		{% block javascriptsafter1 %}{% endblock %}
+		{% block javascriptsafter2 %}{% endblock %}
 	</body>
 </html>
