--- a/templates/club/club-hours.html.twig
+++ b/templates/club/club-hours.html.twig
@@ -5,11 +5,7 @@
 	<link href="/assets/clubs/club.css" rel="stylesheet">
 	<link href="/assets/showcase/showcase.css" rel="stylesheet">
 	<link rel="stylesheet" href="/vendor/jquery-calendar/jquery-calendar.min.css">
-<link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/min/moment-with-locales.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-touchswipe@1.6.18/jquery.touchSwipe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/eonasdan-bootstrap-datetimepicker@4.17.47/build/js/bootstrap-datetimepicker.min.js"></script>
-  
+	<link rel="stylesheet" href="/vendor/jquerysctipttop/jquerysctipttop.css" type="text/css">
 {% endblock %}
 
 
@@ -23,288 +19,111 @@
 
 
 {% block javascriptsafter1 %}
-	<script src="/vendor/jquery-calendar/jquery-calendar.min.js"></script>
+	<script src="/vendor/jquery-calendar/jquery-calendar.js"></script>
 	{# https://www.jqueryscript.net/time-clock/Mobile-Friendly-Calendar-Schedule-Plugin.html #}
 	{# https://www.jqueryscript.net/demo/Mobile-Friendly-Calendar-Schedule-Plugin/# #}
+	<script src="/vendor/moment/moment-with-locales.min.js"></script>
+	<script src="/vendor/jquery-touchswipe/jquery.touchSwipe.min.js"></script>
+	<script src="/vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
 
-<script>
-    $(document).ready(function(){
-      moment.locale('en');
-      var now = moment();
+	<script>
+		$(document).ready(function(){
+			moment.locale('fr');
+			var now = moment();
 
-      /**
-       * Many events
-       */
-      var events = [
-        {
-          start: now.startOf('week').add(9, 'h').format('X'),
-          end: now.startOf('week').add(10, 'h').format('X'),
-          title: '1',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Professionnal'
-        },
-        {
-          start: now.startOf('week').add(10, 'h').format('X'),
-          end: now.startOf('week').add(11, 'h').format('X'),
-          title: '2',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Professionnal'
-        },
-        {
-          start: now.startOf('week').add(11, 'h').format('X'),
-          end: now.startOf('week').add(12, 'h').format('X'),
-          title: '3',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Personnal'
-        },
-        {
-          start: now.startOf('week').add(1, 'days').add(9, 'h').format('X'),
-          end: now.startOf('week').add(1, 'days').add(10, 'h').format('X'),
-          title: '4',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Personnal'
-        },
-        {
-          start: now.startOf('week').add(1, 'days').add(9, 'h').add(30, 'm').format('X'),
-          end: now.startOf('week').add(1, 'days').add(10, 'h').add(30, 'm').format('X'),
-          title: '5',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Arrobe'
-        },
-        {
-          start: now.startOf('week').add(1, 'days').add(11, 'h').format('X'),
-          end: now.startOf('week').add(1, 'days').add(12, 'h').format('X'),
-          title: '6',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Another category'
-        },
-        {
-          start: now.startOf('week').add(2, 'days').add(9, 'h').format('X'),
-          end: now.startOf('week').add(2, 'days').add(10, 'h').format('X'),
-          title: '7',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Personnal'
-        },
-        {
-          start: now.startOf('week').add(2, 'days').add(9, 'h').add(30, 'm').format('X'),
-          end: now.startOf('week').add(2, 'days').add(10, 'h').add(30, 'm').format('X'),
-          title: '8',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Professionnal'
-        },
-        {
-          start: now.startOf('week').add(2, 'days').add(10, 'h').format('X'),
-          end: now.startOf('week').add(2, 'days').add(11, 'h').format('X'),
-          title: '9',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Personnal'
-        },
-        {
-          start: now.startOf('week').add(3, 'days').add(9, 'h').format('X'),
-          end: now.startOf('week').add(3, 'days').add(10, 'h').format('X'),
-          title: '10',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Professionnal'
-        },
-        {
-          start: now.startOf('week').add(3, 'days').add(9, 'h').add(15, 'm').format('X'),
-          end: now.startOf('week').add(3, 'days').add(10, 'h').add(15, 'm').format('X'),
-          title: '11',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Personnal'
-        },
-        {
-          start: now.startOf('week').add(3, 'days').add(9, 'h').add(30, 'm').format('X'),
-          end: now.startOf('week').add(3, 'days').add(10, 'h').add(30, 'm').format('X'),
-          title: '12',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Anything else'
-        },
-        {
-          start: now.startOf('week').add(4, 'days').add(9, 'h').format('X'),
-          end: now.startOf('week').add(4, 'days').add(12, 'h').format('X'),
-          title: '13',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Private'
-        },
-        {
-          start: now.startOf('week').add(4, 'days').add(9, 'h').add(30, 'm').format('X'),
-          end: now.startOf('week').add(4, 'days').add(10, 'h').format('X'),
-          title: '14',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'No more creative category name'
-        },
-        {
-          start: now.startOf('week').add(4, 'days').add(11, 'h').format('X'),
-          end: now.startOf('week').add(4, 'days').add(11, 'h').add(30, 'm').format('X'),
-          title: '15',
-          content: 'Hello World! <br> <p>Foo Bar</p>',
-          category:'Professionnal'
-        },
-        {
-         start: now.startOf('week').add(5, 'days').add(10, 'h').format('X'),
-         end: now.startOf('week').add(5, 'days').add(12, 'h').format('X'),
-         title: '17',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Private'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(9, 'h').add(30, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(10, 'h').add(30, 'm').format('X'),
-         title: '16',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Course'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(11, 'h').add(30, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(12, 'h').add(30, 'm').format('X'),
-         title: '18',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'No more creative category name'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(12, 'h').format('X'),
-         end: now.startOf('week').add(5, 'days').add(13, 'h').format('X'),
-         title: '19',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Another one'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(12, 'h').add(15, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(13, 'h').format('X'),
-         title: '21',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'One again'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(12, 'h').add(45, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(13, 'h').add(45, 'm').format('X'),
-         title: '22',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Encore'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(13, 'h').add(45, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(14, 'h').format('X'),
-         title: '23',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Professionnal'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(12, 'h').format('X'),
-         end: now.startOf('week').add(5, 'days').add(14, 'h').add(30, 'm').format('X'),
-         title: '20',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Private'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(13, 'h').add(45, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(15, 'h').format('X'),
-         title: '27',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Encore'
-       },
-       {
-         start: now.startOf('week').add(5, 'days').add(14, 'h').add(30, 'm').format('X'),
-         end: now.startOf('week').add(5, 'days').add(15, 'h').format('X'),
-         title: '28',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Private'
-       },
-       {
-         start: now.startOf('week').add(6, 'days').add(9, 'h').format('X'),
-         end: now.startOf('week').add(6, 'days').add(11, 'h').format('X'),
-         title: '24',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Foo'
-       },
-       {
-         start: now.startOf('week').add(6, 'days').add(9, 'h').format('X'),
-         end: now.startOf('week').add(6, 'days').add(11, 'h').format('X'),
-         title: '25',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Bar'
-       },
-       {
-         start: now.startOf('week').add(6, 'days').add(9, 'h').format('X'),
-         end: now.startOf('week').add(6, 'days').add(11, 'h').format('X'),
-         title: '26',
-         content: 'Hello World! <br> <p>Foo Bar</p>',
-         category:'Baz'
-       },
-      ];
+			{% set orderDays = {'monday':0, 'tuesday':1, 'wednesday':2, 'thursday':3, 'friday':4, 'saturday':5, 'sunday':6} %}
+			{% set daysDone = [] %}
+			{% set minHour = 23 %}
+			{% set maxHour = 0 %}
+			var events = [
+				{% for clubLesson in clubLessons %}
+					{
+						start: now.startOf('week').add({{ orderDays[clubLesson.day_of_week] }}, 'days').add({{ clubLesson.start_time|split(':')[0] }}, 'h').add({{ clubLesson.start_time|split(':')[1] }}, 'm').format('X'),
+						end: now.startOf('week').add({{ orderDays[clubLesson.day_of_week] }}, 'days').add({{ clubLesson.end_time|split(':')[0] }}, 'h').add({{ clubLesson.end_time|split(':')[1] }}, 'm').format('X'),
+						title: '{{ clubLesson.discipline }}',
+						content: '<i>{{ clubLesson.age_level }}</i>',
+						category: '{{ clubLesson.discipline }}'
+					},
+					{% set minHour = min(minHour, clubLesson.start_time|split(':')[0]) %}
+					{% set maxHour = max(maxHour, clubLesson.end_time|split(':')[0]) %}
+					{% if orderDays[clubLesson.day_of_week] not in daysDone %}
+						{% set daysDone = daysDone|merge([orderDays[clubLesson.day_of_week]]) %}
+					{% endif %}
+				{% endfor %}
+			];
+			{% set minHour = minHour - 1 %}
+			{% set maxHour = maxHour + 1 %}
+
+			var activeDays = [{% for dayDone in daysDone %}{{ dayDone }},{% endfor %}];
 
       /**
        * A daynote
        */
-      var daynotes = [
+      /*var daynotes = [
         {
           time: now.startOf('week').add(15, 'h').add(30, 'm').format('X'),
           title: 'Leo\'s holiday',
-          content: 'yo',
+          content: 'yoo',
           category: 'holiday'
         }
-      ];
+      ];*/
 
-      /**
-       * Init the calendar
-       */
-      var calendar = $('#calendar').Calendar({
-        locale: 'en',
-        weekday: {
-          timeline: {
-            intervalMinutes: 30,
-            fromHour: 9
-          }
-        },
-        events: events,
-        daynotes: daynotes
-      }).init();
+			/**
+			 * Init the calendar
+			 */
+			var calendar = $('#calendar').Calendar({
+					locale: 'fr',
+					weekday: {
+						timeline: {
+							intervalMinutes: 30,
+							fromHour: {{ minHour}},
+							toHour: {{ maxHour}},
+							format: 'HH:mm'
+						},
+						dayline: {
+							weekdays: activeDays,
+							//weekdays: [0, 1, 2,3,4,5],
+							format:'dddd'
+						}
+					},
+					month: {
+						format:'MMMM'
+						
+					},
+					defaultView: {
+						largeScreen:'week',
+						smallScreen:'week',
+						//smallScreenThreshold: 630
+					}
+				});
+			calendar.setEventCategoriesColors([
+				{category: "Taekwondo", color: "#337ab7"},
+				{category: "Taekwonkido", color: "#f9a825"},
+				{category: "Hapkido", color: "#558b2f"},
+				{category: "Sinkido self-defense système", color: "#d84315"},
+			]);
+			calendar.setEvents(events);
+			calendar.init();
 
-      /**
-       * Listening for events
-       */
+			// remove month line
+			$('.calendar-month').remove();
+			// remove button for sliding
+			$('.btn-move-calendar').remove();
+			$('.weektoday').removeClass('weektoday');
+			// disabled click on day column
+			$('.calendar-day-header').css("pointer-events", "none");
+		});
 
-      $('#calendar').on('Calendar.init', function(event, instance, before, current, after){
-        console.log('event : Calendar.init');
-        console.log(instance);
-        console.log(before);
-        console.log(current);
-        console.log(after);
-      });
-      $('#calendar').on('Calendar.daynote-mouseenter', function(event, instance, elem){
-        console.log('event : Calendar.daynote-mouseenter');
-        console.log(instance);
-        console.log(elem);
-      });
-      $('#calendar').on('Calendar.daynote-mouseleave', function(event, instance, elem){
-        console.log('event : Calendar.daynote-mouseleave');
-        console.log(instance);
-        console.log(elem);
-      });
-      $('#calendar').on('Calendar.event-mouseenter', function(event, instance, elem){
-        console.log('event : Calendar.event-mouseenter');
-        console.log(instance);
-        console.log(elem);
-      });
-      $('#calendar').on('Calendar.event-mouseleave', function(event, instance, elem){
-        console.log('event : Calendar.event-mouseleave');
-        console.log(instance);
-        console.log(elem);
-      });
-      $('#calendar').on('Calendar.daynote-click', function(event, instance, elem, evt){
-        console.log('event : Calendar.daynote-click');
-        console.log(instance);
-        console.log(elem);
-        console.log(evt);
-      });
-      $('#calendar').on('Calendar.event-click', function(event, instance, elem, evt){
-        console.log('event : Calendar.event-click');
-        console.log(instance);
-        console.log(elem);
-        console.log(evt);
-      });
-    });
+{#
+	baby : 4-5 ans, blanches à pourpre
+	child-6 : 6-9 ans
+	child-10 : 10-12 ans, pourpres et plus ; 7-12 ans
+	13 : 13 ans et plus, tous niveaux
+	13-blue : 13 ans et plus, ceinture bleue minimum
+	black-belt : ceinture noire
+#}
+
+		
   </script>
 
 
