--- a/templates/club/club-hours-v0.html.twig
+++ b/templates/club/club-hours-v0.html.twig
@@ -12,7 +12,7 @@
 {% block dashboardcontent %}
 
 <br>
-{% include ['club/' ~ club.uuid ~ '/hours.html.twig', 'club/default-hours.html.twig'] %}
+{% include ['club/' ~ club.uuid ~ '/lessons.html.twig', 'club/default-lessons.html.twig'] %}
 
 
 {% endblock %}
