--- a/templates/menuleft.html.twig
+++ b/templates/menuleft.html.twig
@@ -11,7 +11,7 @@
 		{% endif %}
 		{% if menuItem.code == 'hours' %}
 			<li class="nav-item menu-left-club">
-				<a class="nav-link" href="/club/{{ club.uuid}}/hours">
+				<a class="nav-link" href="/club/{{ club.uuid}}/lessons">
 					<span data-feather="clock"></span>
 					{% trans %}Hours{% endtrans %}
 				</a>
