--- a/templates/club/club-lessons.html.twig
+++ b/templates/club/club-lessons.html.twig
@@ -19,35 +19,53 @@
 
 
 {% block javascriptsafter1 %}
-	<script src="/vendor/jquery-calendar/jquery-calendar.js"></script>
+	<script src="/vendor/jquery-calendar/jquery-calendar.min.js"></script>
 	{# https://www.jqueryscript.net/time-clock/Mobile-Friendly-Calendar-Schedule-Plugin.html #}
 	{# https://www.jqueryscript.net/demo/Mobile-Friendly-Calendar-Schedule-Plugin/# #}
 	<script src="/vendor/moment/moment-with-locales.min.js"></script>
 	<script src="/vendor/jquery-touchswipe/jquery.touchSwipe.min.js"></script>
 	<script src="/vendor/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
+	{# https://awik.io/generate-brighter-darker-versions-color-javascript/ #}
+	{# https://github.com/bgrins/TinyColor #}
+	<script src="/vendor/tinycolor/tinycolor.min.js"></script>
 
 	<script>
+		function hideSomeFunctionalities() {
+			// remove month line
+			$('.calendar-month').remove();
+			// remove button for sliding
+			$('.btn-move-calendar').remove();
+			$('.weektoday').removeClass('weektoday');
+			// disabled click on day column
+			$('.calendar-day-header').css("pointer-events", "none");
+		}
+
 		$(document).ready(function(){
 			moment.locale('fr');
 			var now = moment();
 
 			{% set orderDays = {'monday':0, 'tuesday':1, 'wednesday':2, 'thursday':3, 'friday':4, 'saturday':5, 'sunday':6} %}
 			{% set daysDone = [] %}
+			{% set categories = [] %}
 			{% set minHour = 23 %}
 			{% set maxHour = 0 %}
 			var events = [
 				{% for clubLesson in clubLessons %}
+					{% set categoryName = clubLesson.discipline ~ ' (' ~ clubLesson.age_level ~ ')' %}
 					{
 						start: now.startOf('week').add({{ orderDays[clubLesson.day_of_week] }}, 'days').add({{ clubLesson.start_time|split(':')[0] }}, 'h').add({{ clubLesson.start_time|split(':')[1] }}, 'm').format('X'),
 						end: now.startOf('week').add({{ orderDays[clubLesson.day_of_week] }}, 'days').add({{ clubLesson.end_time|split(':')[0] }}, 'h').add({{ clubLesson.end_time|split(':')[1] }}, 'm').format('X'),
 						title: '{{ clubLesson.discipline }}',
-						content: '<i>{{ clubLesson.age_level }}</i>',
-						category: '{{ clubLesson.discipline }}'
+						content: '<i>{{ clubLesson.age_level }}</i><br><br>{{ clubLesson.location.name }}<br>{{ clubLesson.location.address }}<br>{{ clubLesson.location.zipcode }} {{ clubLesson.location.city }}',
+						category: '{{ categoryName }}'
 					},
 					{% set minHour = min(minHour, clubLesson.start_time|split(':')[0]) %}
 					{% set maxHour = max(maxHour, clubLesson.end_time|split(':')[0]) %}
 					{% if orderDays[clubLesson.day_of_week] not in daysDone %}
 						{% set daysDone = daysDone|merge([orderDays[clubLesson.day_of_week]]) %}
+					{% endif %}
+					{% if categoryName not in categories %}
+						{% set categories = categories|merge([categoryName]) %}
 					{% endif %}
 				{% endfor %}
 			];
@@ -55,7 +73,7 @@
 			{% set maxHour = maxHour + 1 %}
 
 			var activeDays = [{% for dayDone in daysDone %}{{ dayDone }},{% endfor %}];
-
+			var categoryNames = [{% for category in categories %}'{{ category }}',{% endfor %}];
       /**
        * A daynote
        */
@@ -96,36 +114,42 @@
 						//smallScreenThreshold: 630
 					}
 				});
-			calendar.setEventCategoriesColors([
-				{category: "Taekwondo", color: "#337ab7"},
-				{category: "Taekwonkido", color: "#f9a825"},
-				{category: "Hapkido", color: "#558b2f"},
-				{category: "Sinkido self-defense système", color: "#d84315"},
-			]);
+
+			{# level: brighen #}
+			var levels = {'baby':-30, 'child-6':-15, 'child-10':0, '13':13, '13-blue':25, 'black-belt':35};
+			var displines = {
+				'Taekwondo': '#337ab7',
+				'Taekwonkido': '#f9a825',
+				'Hapkido': '#558b2f',
+				'Sinkido self-defense système': '#d84315'};
+			var eventCategoriesColors = [];
+			Object.keys(displines).forEach(function (displine) {
+				Object.keys(levels).forEach(function (level) {
+					var originalColor = tinycolor(displines[displine]);
+					var amout = levels[level];
+					var ncolor = originalColor;
+					if(amout < 0) {
+						ncolor = originalColor.brighten(-amout).toString();
+					} else if(amout > 0) {
+						ncolor = originalColor.darken(amout).toString();
+					}
+					if(categoryNames.includes(displine + ' (' + level + ')')) {
+						eventCategoriesColors.push({category: displine + ' (' + level + ')', color: ncolor});
+					}
+				});
+			});
+			calendar.setEventCategoriesColors(eventCategoriesColors);
 			calendar.setEvents(events);
 			calendar.init();
-
-			// remove month line
-			$('.calendar-month').remove();
-			// remove button for sliding
-			$('.btn-move-calendar').remove();
-			$('.weektoday').removeClass('weektoday');
-			// disabled click on day column
-			$('.calendar-day-header').css("pointer-events", "none");
+			hideSomeFunctionalities();
 		});
 
-{#
-	baby : 4-5 ans, blanches à pourpre
-	child-6 : 6-9 ans
-	child-10 : 10-12 ans, pourpres et plus ; 7-12 ans
-	13 : 13 ans et plus, tous niveaux
-	13-blue : 13 ans et plus, ceinture bleue minimum
-	black-belt : ceinture noire
-#}
-
 		
-  </script>
-
+		{#	$('#calendar').on('Calendar.init', function(event, instance, before, current, after){
+			console.log('init...');
+			hideSomeFunctionalities();
+		}) #};
+	</script>
 
 {% endblock %}
 
